--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "watch": "nodemon",
-    "seed": "node /seeders/seeds.js"
+    "seed": "node seeders/seeds.js"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +16,9 @@
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "faker": "^4.1.0",
-    "graphql": "^16.2.0",
+    "graphql": "^15.8.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.9"
+    "mongoose": "^6.0.13"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
